--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+h1,
+h2 {
+  margin: 0;
+}
+
+body {
+  background: linear-gradient(to right, #f857a6, #ff5858);
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+}
+
+input,
+button {
+  border-radius: 10px;
+}
